--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   supabase_flutter: ^2.5.5
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
 
