--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.1.0+1
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -32,11 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
-  supabase_flutter: ^2.5.11
+  supabase_flutter: ^2.7.0
   flutter_screenutil: ^5.9.3
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.1
   image_picker: ^1.1.2
   shamsi_date: ^1.0.4
+  url_launcher: ^6.3.0
 
 flutter_launcher_icons:
     android: "launcher_icon"
