--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.1.0+1
+version: 1.1.0+2
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^1.1.2
   shamsi_date: ^1.0.4
   url_launcher: ^6.3.0
+  flutter_staggered_grid_view: ^0.6.2
+  uni_links: ^0.5.0
 
 flutter_launcher_icons:
     android: "launcher_icon"
@@ -83,6 +85,7 @@ flutter:
   assets:
     - lib/util/images/vistalogo.png
     - lib/util/images/headerBack.jpg
+    - lib/util/images/default-avatar.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
