--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+2
+version: 1.2.0+3
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -39,6 +39,7 @@ dependencies:
   shamsi_date: ^1.0.4
   url_launcher: ^6.3.1
   flutter_staggered_grid_view: ^0.7.0
+  app_links: ^6.3.2
 
 flutter_launcher_icons:
   android: true
