--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_staggered_grid_view: ^0.7.0
   app_links: ^6.3.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 flutter_launcher_icons:
   android: true
