--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   app_links: ^6.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  share_plus: ^10.1.1
 
 flutter_launcher_icons:
   android: true
