--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hive_flutter: ^1.1.0
   share_plus: ^10.1.1
   equatable: ^2.0.5
+  flutter_mentions: ^2.0.1
 
 flutter_launcher_icons:
   android: true
