--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.4.7+7.5
+version: 1.4.8+8
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -28,23 +28,25 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  app_links: ^6.3.2
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.3
-  supabase_flutter: ^2.8.0
-  flutter_screenutil: ^5.9.3
+  flutter_floating_bottom_bar: ^1.2.1
   flutter_launcher_icons: ^0.13.1
-  image_picker: ^1.1.2
-  shamsi_date: ^1.0.4
-  url_launcher: ^6.3.1
+  flutter_mentions: ^2.0.1
+  flutter_riverpod: ^2.5.3
+  flutter_screenutil: ^5.9.3
   flutter_staggered_grid_view: ^0.7.0
-  app_links: ^6.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  shamsi_date: ^1.0.4
   share_plus: ^10.1.1
-  equatable: ^2.0.5
-  flutter_mentions: ^2.0.1
+  supabase_flutter: ^2.8.0
+  url_launcher: ^6.3.1
 
 flutter_launcher_icons:
   android: true
@@ -55,8 +57,8 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "lib/util/images/vistalogo.png"
-    background_color: "#FFFFFF"  # رنگ پس‌زمینه واقعی
-    theme_color: "#000000"       # رنگ تم واقعی
+    background_color: "#FFFFFF" # رنگ پس‌زمینه واقعی
+    theme_color: "#000000" # رنگ تم واقعی
   windows:
     generate: true
     image_path: "lib/util/images/vistalogo.png"
@@ -65,16 +67,9 @@ flutter_launcher_icons:
     generate: true
     image_path: "lib/util/images/vistalogo.png"
 
-
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
   build_runner: ^2.4.11
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
