--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.3+79
+version: 2.0.5+80
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   app_links: ^6.3.2
+  awesome_dialog: ^3.2.1
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
   flutter:
@@ -42,6 +43,7 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^1.2.2
   image_picker: ^1.1.2
+  rive: ^0.13.18
   shamsi_date: ^1.0.4
   share_plus: ^10.1.2
   supabase_flutter: ^2.8.1
