--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.9+84
+version: 2.0.10+85
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -31,6 +31,8 @@ dependencies:
   app_links: ^6.3.2
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1
