--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,26 +32,30 @@ android {
         versionName = flutter.versionName
     }
 
-    signingConfigs {
-        release {
-            // Load signing properties from key.properties file
-            def keystoreProperties = new Properties()
-            def keystorePropertiesFile = rootProject.file("key.properties")
-            if (keystorePropertiesFile.exists()) {
-                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-            }
+//    signingConfigs {
+//        release {
+//            // Load signing properties from key.properties file
 
-            keyAlias = keystoreProperties['keyAlias']
-            keyPassword = keystoreProperties['keyPassword']
-            storeFile = file(keystoreProperties['storeFile'])
-            storePassword = keystoreProperties['storePassword']
-        }
-    }
+//            def keystoreProperties = new Properties()
+//            def keystorePropertiesFile = rootProject.file("key.properties")
+//            if (keystorePropertiesFile.exists()) {
+//                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+//            }
+//
+//            keyAlias = keystoreProperties['keyAlias']
+//            keyPassword = keystoreProperties['keyPassword']
+//            storeFile = file(keystoreProperties['storeFile'])
+//            storePassword = keystoreProperties['storePassword']
+//        }
+//    }
+
+
 
     buildTypes {
         release {
-            // Use the release signing config
-            signingConfig = signingConfigs.release
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig = signingConfigs.debug
         }
     }
 }
