refactor: update version to 2.1.0+87, remove unused screens, and adjust app colors

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+#org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
 org.gradle.java.home=/home/mrit/.jdks/corretto-17.0.13
