--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.11+86
+version: 2.1.0+87
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -29,24 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   app_links: ^6.3.2
-  aws_s3_api: ^2.0.0
   cupertino_icons: ^1.0.8
-  equatable: ^2.0.5
   firebase_core: ^3.8.0
   firebase_messaging: ^15.1.5
   flutter:
     sdk: flutter
-  flutter_image_compress: ^2.3.0
   flutter_launcher_icons: ^0.14.1
-  flutter_mentions: ^2.0.1
   flutter_riverpod: ^2.6.1
   flutter_screenutil: ^5.9.3
   flutter_staggered_grid_view: ^0.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  http: ^1.2.2
   image_picker: ^1.1.2
-  path: ^1.8.0
   shamsi_date: ^1.0.4
   share_plus: ^10.1.2
   supabase_flutter: ^2.8.1
@@ -56,20 +50,22 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "lib/util/images/vistalogo.png"
+  image_path: "lib/util/images/vistaNotes.png"
+  adaptive_icon_background: "#000000" # رنگ پس‌زمینه برای اندروید
+  adaptive_icon_foreground: "lib/util/images/vistaNotes.png" # آیکون جلو برای اندروید
   min_sdk_android: 19 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "lib/util/images/vistalogo.png"
-    background_color: "#FFFFFF" # رنگ پس‌زمینه واقعی
+    image_path: "lib/util/images/vistaNotes.png"
+    background_color: "#000000" # رنگ پس‌زمینه واقعی
     theme_color: "#000000" # رنگ تم واقعی
   windows:
     generate: true
-    image_path: "lib/util/images/vistalogo.png"
+    image_path: "lib/util/images/vistaNotes.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "lib/util/images/vistalogo.png"
+    image_path: "lib/util/images/vistaNotes.png"
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -90,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/util/images/vistalogo.png
+    - lib/util/images/vistaNotes.png
     - lib/util/images/headerBack.jpg
     - lib/util/images/default-avatar.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
