--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "vista_notes2",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#FFFFFF",
+    "background_color": "#000000",
     "theme_color": "#000000",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
